# RepresentationTransfer

./: .gitignore  README.md  ntb.py  pyproject.toml
data/clean_text/: emobank.csv  facebook.csv  fiction4.csv
data/concept_vectors/text/: Fiction4Sentiment_concept_text.csv
data/processed/: EmobankSentiment.csv  Fiction4Sentiment.csv  Fiction4Sentiment_Translated.csv
data/raw/: fiction4sentiment_saved_translations.csv  preprocess_data.py
src/: conceptdefiner.py
src/representationtransfer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
