[project]
name = "representationtransfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "datasets>=4.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "ipykernel>=7.1.0",
    "iprogress>=0.4",
    "ipywidgets>=8.1.8",
]
